R410-data: Fix doc et method deck-price
