# R401-Architecture_logicielle/pokapi-data/swagger.json
@@ -310,7 +310,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/ListString"
+                "$ref": "#/components/schemas/Deck"
               }
             }
           }
@@ -379,6 +379,18 @@
         "items": {
           "type": "string",
           "example": "fire"
+        }
+      },
+      "Deck": {
+        "type": "object",
+        "properties": {
+          "deck": {
+            "type": "array",
+            "items": {
+              "type": "string",
+              "example": "xy1-1"
+            }
+          }
         }
       }
     },
